Little fix wrap

--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ div.imgFullSize{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
     margin-top: 10px;
 }
